# libmaelir

./: .gitmodules  CMakeLists.txt  README.md
application_state/: CMakeLists.txt  application_state_common.yml  parameters_common.yml
cmake/: convert_font.cmake  generate_application_state.cmake  generate_application_state.py  generated_application_state.cc.jinja2  generated_application_state.hh.jinja2
esp32/: CMakeLists.txt
esp32/blitter_esp32/: CMakeLists.txt  blitter_esp32.cc
esp32/blitter_esp32/include/: blitter_esp32.hh
esp32/can_esp32/: CMakeLists.txt  can_esp32.cc
esp32/can_esp32/include/: can_esp32.hh
esp32/gpio_esp32/: CMakeLists.txt  gpio_esp32.cc
esp32/gpio_esp32/include/: gpio_esp32.hh
esp32/gps_esp32/: CMakeLists.txt  i2c_gps_esp32.cc  uart_gps_esp32.cc
esp32/gps_esp32/include/: i2c_gps_esp32.hh  uart_gps_esp32.hh
esp32/httpd_client_esp32/: CMakeLists.txt  httpd_client_esp32.cc
esp32/httpd_ota_updater_esp32/: CMakeLists.txt  httpd_ota_updater_esp32.cc
esp32/https_client_esp32/: CMakeLists.txt  https_client_esp32.cc
esp32/jd9365_esp32/: CMakeLists.txt  jd9365_display_esp32.cc
esp32/jd9365_esp32/include/: jd9365_display_esp32.hh
esp32/nvm_esp32/: CMakeLists.txt  nvm_esp32.cc
esp32/nvm_esp32/include/: nvm_esp32.hh
esp32/os/: CMakeLists.txt  os_implementation_freertos.cc
esp32/os/include/: os_implementation.hh
esp32/pm_esp32/: CMakeLists.txt  pm_esp32.cc
esp32/pm_esp32/include/: pm_esp32.hh
esp32/st7701_esp32/: CMakeLists.txt  st7701_display_esp32.cc
esp32/st7701_esp32/include/: st7701_display_esp32.hh
esp32/st7701_rgb_esp32/: CMakeLists.txt  st7701_rgb_esp32.cc
esp32/st7701_rgb_esp32/include/: st7701_rgb_esp32.hh
esp32/stepper_motor_esp32/: CMakeLists.txt  stepper_motor_esp32.cc
esp32/stepper_motor_esp32/include/: stepper_motor_esp32.hh
esp32/touch_esp32/: CMakeLists.txt  touch_esp32.cc
esp32/touch_esp32/include/: touch_esp32.hh
esp32/uart_esp32/: CMakeLists.txt  uart_esp32.cc
esp32/uart_esp32/include/: uart_esp32.hh
qt/: CMakeLists.txt
qt/blitter_host/: CMakeLists.txt  blitter_host.cc
qt/blitter_host/include/: blitter_host.hh
qt/curl_httpd_client/: CMakeLists.txt  curl_httpd_client.cc
qt/curl_https_client/: CMakeLists.txt  curl_https_client.cc
qt/display/: CMakeLists.txt
qt/gpio_host/: CMakeLists.txt  gpio_host.cc
qt/gpio_host/include/: gpio_host.hh
qt/nvm_host/: CMakeLists.txt  nvm_host.cc
qt/nvm_host/include/: nvm_host.hh
qt/os/: CMakeLists.txt  os_implementation_qt.cc  thread_qt.cc
qt/os/include/: os_implementation.hh
qt/pm_host/: CMakeLists.txt  pm_host.cc
qt/pm_host/include/: pm_host.hh
src/: CMakeLists.txt
src/application_state/: CMakeLists.txt  application_state.cc
src/application_state/include/: application_state.hh
src/base_thread/: CMakeLists.txt
src/base_thread/include/: base_thread.hh
src/bresenham/: CMakeLists.txt
src/bresenham/include/: bresenham.hh
src/button_debouncer/: CMakeLists.txt
src/cohen_sutherland/: CMakeLists.txt
src/cohen_sutherland/include/: cohen_sutherland.hh
src/displays/: CMakeLists.txt
src/displays/display_480x480/: i_display_properties.hh
src/displays/display_480x800/: i_display_properties.hh
src/displays/display_800x480/: i_display_properties.hh
src/displays/display_800x800/: i_display_properties.hh
src/filesystem/: CMakeLists.txt
src/filesystem/include/: filesystem.hh
src/httpd_client/: CMakeLists.txt
src/httpd_client/include/: httpd_client.hh
src/https_client/: CMakeLists.txt
src/https_client/include/: https_client.hh
src/include/: debug_assert.hh  event_notifier.hh  opportunistic_semaphore.hh  semaphore.hh  thread_parameters.hh  time.hh
src/include/hal/: i_blitter.hh  i_can.hh  i_display.hh  i_display_rotation.hh  i_gps.hh  i_nvm.hh  i_pm.hh  i_stepper_motor.hh  i_touch.hh
src/include/hal/mock/: mock_gpio.hh  mock_stepper_motor.hh
src/nmea_parser/: CMakeLists.txt  nmea_parser.cc
src/nmea_parser/include/: nmea_parser.hh
src/opportunistic_scheduler/: CMakeLists.txt  opportunistic_scheduler.cc
src/opportunistic_scheduler/include/: opportunistic_scheduler.hh
src/opportunistic_semaphore/: CMakeLists.txt  opportunistic_scheduler.cc  opportunistic_semaphore.cc
src/opportunistic_semaphore/include/: opportunistic_scheduler.hh  opportunistic_semaphore.hh
src/os/: CMakeLists.txt
src/os/include/os/: memory.hh  thread.hh
src/painter/: CMakeLists.txt  painter.cc
src/painter/include/: image.hh  painter.hh
src/rotary_encoder/: CMakeLists.txt
src/rotary_encoder/include/: rotary_encoder.hh
src/std_filesystem/: CMakeLists.txt  std_filesystem.cc
src/timer_manager/: CMakeLists.txt  timer_manager.cc
src/timer_manager/include/: timer_manager.hh
src/ui_menu/: CMakeLists.txt  menu_screen.cc
src/ui_menu/include/: menu_screen.hh
test/: CMakeLists.txt  mock_time.cc  mock_time.hh  thread_fixture.hh
test/include/: os_implementation.hh
test/mock_filesystem/: CMakeLists.txt
test/mock_httpd_client/: CMakeLists.txt  mock_httpd_client.cc
test/mock_https_client/: mock_https_client.cc
test/os/: base_thread_unittest.cc  os_implementation.cc  semaphore_unittest.cc
test/unittest/: CMakeLists.txt  test_nmea_parser.cc  test_opportunistic_scheduler.cc  test_timer_manager.cc
